<resources>
    <string name="app_name">Shopu</string>
    <string name="nome_loja"><b><font color="#B87F0D">Loja  Virtual </font></b></string>
    <string name="texto_botao_entrar">Entrar</string>
    <string name="faça_cadastro"><b><font color="#B87F0D">Faça  seu Cadastro </font></b></string>
    <string name="nome"><b><font color="#FFFFFFFF">Nome</font></b></string>
    <string name="Telefone"><b><font color="#FFFFFFFF">Telefone - (DD)</font></b></string>
    <string name="Email"><b><font color="#FFFFFFFF">Email</font></b></string>
    <string name="Senha"><b><font color="#FFFFFFFF">Senha</font></b></string>
    <string name="texto_cadastro"><font color="#3F51B5">Não tem uma ? Cadastre-se >Aqui!</font></string>
    <string name="texto_dialog_carregango"><font color="#3F51B5">Carregando!</font></string>
    <string name="menu_item_perfil">Perfil</string>
    <string name="menu_item_pedidos">Pedidos</string>
    <string name="menu_item_deslogar">Sair da Sessão</string>
    <string name="texto_botao_deslogar">Sair</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="titulo_escolha_tamano_calcado">Escolha o Tamanho</string>
    <string name="titulo_preco_produto">Preco Produto</string>
    <string name="texto_botao_finzalizar_pedido">Finalizar Pedido</string>
    <string name="sapato_de_couro">Sapato de Couro</string>
    <string name="r_150_00">R$150.00</string>
    <string name="_42">42</string>
    <string name="_41">41</string>
    <string name="_40">40</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="r_450_00">R$450,00</string>
</resources>