<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/foto_tenis"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@color/black"/>

    <TextView
        android:id="@+id/nomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sapato_de_couro"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

      <TextView
        android:id="@+id/escolha_tamanho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/titulo_escolha_tamano_calcado"
        android:textSize="18sp" />

    <!--Esse radio group para montar as tabelas de numeração de tenis  -->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tamanho_38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_38"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            />

        <RadioButton
            android:id="@+id/tamanho_39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_39"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="10dp"/>

        <RadioButton
            android:id="@+id/tamanho_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_40"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="10dp"/>

        <RadioButton
            android:id="@+id/tamanho_41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_41"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="10dp"/>

        <RadioButton
            android:id="@+id/tamanho_42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_42"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="10dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/titulo_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_preco_produto"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/r_150_00"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/botao_finalizarpedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:text="@string/texto_botao_finzalizar_pedido"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>



