<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtcadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/faça_cadastro"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagemcadastro"
        android:layout_width="67dp"
        android:layout_height="65dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nome_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtcadastro"
        app:layout_constraintVertical_bias="0.829"
        app:srcCompat="@drawable/img_2" />

    <EditText
        android:id="@+id/nome_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="90dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:hint="@string/nome"
        android:inputType="textAutoComplete"
        android:maxLines="1"
        android:padding="15dp"
        android:textColorHint="#F57C00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtcadastro"
        app:layout_constraintVertical_bias="0.146"
        app:layout_marginBaseline="50sp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="15dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome_cadastro"
        app:layout_marginBaseline="50sp" />

    <EditText
        android:id="@+id/Telefone_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:hint="@string/Telefone"
        android:inputType="textPhonetic"
        android:maxLines="1"
        android:padding="15dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_marginBaseline="50sp" />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="44dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:hint="@string/Senha"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="15dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Telefone_cadastro"
        app:layout_marginBaseline="50sp" />

    <Button
        android:id="@+id/btCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:padding="20dp"
        android:text="@string/cadastre_se"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

